[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Environment/UpDownBlock/UpDownBlock.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Managers/PlayerManager/PlayerManager.tscn" type="PackedScene" id=2]
[ext_resource path="res://TileSets/Grass.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Environment/DeathBlocks/DeathBlock.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Collectables/Ticket/Ticket.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Areas/DeathArea/DeathArea.tscn" type="PackedScene" id=6]
[ext_resource path="res://Textures/NightSky.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Environment/LevelExit/LevelExitLift.tscn" type="PackedScene" id=9]
[ext_resource path="res://Levels/LevelManager.gd" type="Script" id=10]
[ext_resource path="res://Scenes/HUD/ScreenFader/ScreenFader.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/HUD/Timer/TicketTimer.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Background/ParallaxBackground.tscn" type="PackedScene" id=13]

[node name="1-3" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 10 )

[node name="FadeOutTimer" type="Timer" parent="."]

[node name="ParallaxBackground" parent="." instance=ExtResource( 13 )]
texture = ExtResource( 8 )

[node name="DeathArea" parent="." instance=ExtResource( 6 )]
position = Vector2( 177, 456 )
scale = Vector2( 30.8705, 0.838452 )

[node name="LeveExitLift" parent="." instance=ExtResource( 9 )]
position = Vector2( 286, 136 )
move_to = Vector2( 0, -500 )

[node name="TicketTimer" parent="." instance=ExtResource( 12 )]
position = Vector2( 281, 84 )

[node name="Grass" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -1245185, 0, 0, -1310720, 0, 2, -1310700, 0, 0, -1310699, 0, 1, -1310698, 0, 2, -1179649, 0, 65536, -1245184, 0, 65538, -1245164, 0, 65536, -1245163, 0, 65537, -1245162, 0, 65538, -1114113, 0, 65536, -1179648, 0, 65538, -1179628, 0, 65536, -1179627, 0, 65537, -1179626, 0, 65538, -1048577, 0, 65536, -1114112, 0, 65538, -1114092, 0, 65536, -1114091, 0, 65537, -1114090, 0, 65538, -983041, 0, 65536, -1048576, 0, 65538, -1048556, 0, 65536, -1048555, 0, 65537, -1048554, 0, 65538, -917505, 0, 65536, -983040, 0, 65538, -983020, 0, 65536, -983019, 0, 65537, -983018, 0, 65538, -851969, 0, 65536, -917504, 0, 65538, -917484, 0, 65536, -917483, 0, 65537, -917482, 0, 65538, -786433, 0, 65536, -851968, 0, 65538, -851948, 0, 65536, -851947, 0, 65537, -851946, 0, 65538, -720897, 0, 65536, -786432, 0, 65538, -786412, 0, 65536, -786411, 0, 65537, -786410, 0, 65538, -655361, 0, 65536, -720896, 0, 65538, -720876, 0, 65536, -720875, 0, 65537, -720874, 0, 65538, -589825, 0, 65536, -655360, 0, 65538, -655340, 0, 65536, -655339, 0, 65537, -655338, 0, 65538, -524289, 0, 65536, -589824, 0, 65538, -589804, 0, 65536, -589803, 0, 65537, -589802, 0, 65538, -458753, 0, 65536, -524288, 0, 65538, -524268, 0, 65536, -524267, 0, 65537, -524266, 0, 65538, -393217, 0, 65536, -458752, 0, 65538, -458732, 0, 65536, -458731, 0, 65537, -458730, 0, 65538, -327681, 0, 65536, -393216, 0, 65538, -393196, 0, 65536, -393195, 0, 65537, -393194, 0, 65538, -262145, 0, 65536, -327680, 0, 65538, -327660, 0, 65536, -327659, 0, 65537, -327658, 0, 65538, -196609, 0, 65536, -262144, 0, 65538, -262124, 0, 65536, -262123, 0, 65537, -262122, 0, 65538, -131073, 0, 65536, -196608, 0, 65538, -196588, 0, 65536, -196587, 0, 65537, -196586, 0, 65538, -65537, 0, 65536, -131072, 0, 65538, -131052, 0, 65536, -131051, 0, 65537, -131050, 0, 65538, -1, 0, 65536, -65536, 0, 65538, -65516, 0, 65536, -65515, 0, 65537, -65514, 0, 65538, 65535, 0, 65536, 0, 0, 65538, 20, 0, 65536, 21, 0, 65537, 22, 0, 65538, 131071, 0, 65536, 65536, 0, 65538, 65556, 0, 65536, 65557, 0, 65537, 65558, 0, 65538, 196607, 0, 65536, 131072, 0, 65538, 131092, 0, 65536, 131093, 0, 65537, 131094, 0, 65538, 262143, 0, 65536, 196608, 0, 65538, 196628, 0, 65536, 196629, 0, 65537, 196630, 0, 65538, 327679, 0, 65536, 262144, 0, 65538, 262164, 0, 65536, 262165, 0, 65537, 262166, 0, 65538, 393215, 0, 65536, 327680, 0, 65538, 327700, 0, 65536, 327701, 0, 65537, 327702, 0, 65538, 458751, 0, 65536, 393216, 0, 65538, 393236, 0, 65536, 393237, 0, 65537, 393238, 0, 65538, 524287, 0, 65536, 458752, 0, 65538, 458772, 0, 65536, 458773, 0, 65537, 458774, 0, 65538, 589823, 0, 65536, 524288, 0, 65538, 524303, 0, 0, 524304, 0, 1, 524305, 0, 1, 524306, 0, 1, 524307, 0, 1, 524308, 0, 131078, 524309, 0, 65537, 524310, 0, 65538, 655359, 0, 65536, 589824, 0, 65538, 589839, 0, 131072, 589840, 0, 131073, 589841, 0, 131073, 589842, 0, 131073, 589843, 0, 131073, 589844, 0, 65542, 589845, 0, 65537, 589846, 0, 65538, 720895, 0, 65536, 655360, 0, 65538, 655369, 0, 196608, 655370, 0, 196610, 655380, 0, 65536, 655381, 0, 65537, 655382, 0, 65538, 786431, 0, 65536, 720896, 0, 65538, 720916, 0, 65536, 720917, 0, 65537, 720918, 0, 65538, 851967, 0, 65536, 786432, 0, 65538, 786435, 0, 196608, 786436, 0, 196610, 786452, 0, 65536, 786453, 0, 65537, 786454, 0, 65538, 917503, 0, 65536, 851968, 0, 65538, 851988, 0, 65536, 851989, 0, 65537, 851990, 0, 65538, 983039, 0, 65536, 917504, 0, 65538, 917524, 0, 65536, 917525, 0, 65537, 917526, 0, 65538, 1048575, 0, 65536, 983040, 0, 262149, 983041, 0, 196610, 983053, 0, 196608, 983054, 0, 196610, 983060, 0, 65536, 983061, 0, 65537, 983062, 0, 65538, 1114111, 0, 65536, 1048576, 0, 65538, 1048596, 0, 65536, 1048597, 0, 65537, 1048598, 0, 65538, 1179647, 0, 65536, 1114112, 0, 65538, 1114132, 0, 65536, 1114133, 0, 65537, 1114134, 0, 65538, 1245183, 0, 65536, 1179648, 0, 65538, 1179652, 0, 196608, 1179653, 0, 196610, 1179668, 0, 65536, 1179669, 0, 65537, 1179670, 0, 65538, 1310719, 0, 65536, 1245184, 0, 65538, 1245204, 0, 65536, 1245205, 0, 65537, 1245206, 0, 65538, 1376255, 0, 65536, 1310720, 0, 65538, 1310740, 0, 65536, 1310741, 0, 65537, 1310742, 0, 65538, 1441791, 0, 65536, 1376256, 0, 65538, 1376265, 0, 0, 1376266, 0, 2, 1376276, 0, 65536, 1376277, 0, 65537, 1376278, 0, 65538, 1507327, 0, 65536, 1441792, 0, 65538, 1441801, 0, 131072, 1441802, 0, 131074, 1441812, 0, 65536, 1441813, 0, 65537, 1441814, 0, 65538, 1572863, 0, 65536, 1507328, 0, 65538, 1507345, 0, 0, 1507346, 0, 1, 1507347, 0, 1, 1507348, 0, 131078, 1507349, 0, 65537, 1507350, 0, 65538, 1638399, 0, 65536, 1572864, 0, 65538, 1572867, 0, 0, 1572868, 0, 1, 1572869, 0, 2, 1572881, 0, 65536, 1572882, 0, 65537, 1572883, 0, 65537, 1572884, 0, 65537, 1572885, 0, 65537, 1572886, 0, 65538, 1703935, 0, 65536, 1638400, 0, 65538, 1638403, 0, 65536, 1638404, 0, 65537, 1638405, 0, 65538, 1638417, 0, 65536, 1638418, 0, 65537, 1638419, 0, 65537, 1638420, 0, 65537, 1638421, 0, 65537, 1638422, 0, 65538, 1769471, 0, 65536, 1703936, 0, 65538, 1703939, 0, 65536, 1703940, 0, 65537, 1703941, 0, 65538, 1703953, 0, 65536, 1703954, 0, 65537, 1703955, 0, 65537, 1703956, 0, 65537, 1703957, 0, 65537, 1703958, 0, 65538, 1835007, 0, 131072, 1769472, 0, 131074, 1769475, 0, 131072, 1769476, 0, 131073, 1769477, 0, 131074, 1769489, 0, 131072, 1769490, 0, 131073, 1769491, 0, 131073, 1769492, 0, 131073, 1769493, 0, 131073, 1769494, 0, 131074 )

[node name="ScreenFader" parent="." instance=ExtResource( 11 )]

[node name="Sprite" parent="ScreenFader" index="0"]
visible = false

[node name="DeathBlock" parent="." instance=ExtResource( 4 )]
position = Vector2( 312, 176 )

[node name="DeathBlock2" parent="." instance=ExtResource( 4 )]
position = Vector2( 296, 176 )

[node name="DeathBlock3" parent="." instance=ExtResource( 4 )]
position = Vector2( 280, 176 )

[node name="DeathBlock4" parent="." instance=ExtResource( 4 )]
position = Vector2( 248, 176 )

[node name="DeathBlock5" parent="." instance=ExtResource( 4 )]
position = Vector2( 264, 176 )

[node name="UpDownBlock" parent="." instance=ExtResource( 1 )]
position = Vector2( 308, 368 )
end_position = Vector2( 0, -150 )

[node name="Ticket" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 201 )

[node name="PlayerManager" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 375 )

[node name="Character" parent="PlayerManager" index="0"]
position = Vector2( 280, -17 )

[node name="CharacterAnimation" parent="PlayerManager/Character" index="2"]
autoplay = ""

[node name="AnimationTree" parent="PlayerManager/Character/CharacterAnimation" index="0"]
parameters/in_air/current = 0

[node name="Camera" parent="PlayerManager" index="1"]
max_y = -285.0

[editable path="TicketTimer"]
[editable path="TicketTimer/Timer"]
[editable path="TicketTimer/Ticket"]
[editable path="ScreenFader"]
[editable path="UpDownBlock"]
[editable path="PlayerManager"]
[editable path="PlayerManager/Character"]
[editable path="PlayerManager/Character/ShootCheckArea"]
